--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@
 	color:blue !important;
 }
 .banner{
-	background-image: url("../images/synratech/banner4.jpg");
+/* 	background-image: url("../images/synratech/banner4.jpg"); */
 	background-size:cover;
 }
 p{
